front/src/app/pages/articles/list/list.component.scss
.articlesContainer{
    display: flex;
    flex-direction: column;
    padding:1.5rem 1.5rem;
    flex-wrap: wrap;

    @media (max-width: 760px) {
        padding:1.5rem 1rem;
    }

    .buttonSelectContainer{
        display: flex;
        justify-content: space-between;
        flex-shrink: 0;
        min-width: 100%;
        width: 100%;
        align-items: center;

        @media (max-width: 600px) {
            flex-direction: column;
            row-gap: 1.5rem;
        }
    }

    .buttonSelectContainer .sort{
        font-weight: bold;
        display: flex;
        justify-content: center;
        column-gap: 1rem;
        cursor: pointer;
    }
    
    .articlesGroup{
        display: grid;
        grid-template-columns: 1fr 1fr;
        column-gap: 1rem;
        row-gap: 1rem;
        margin-top: 1.5rem;

        @media (max-width: 760px) {
            grid-template-columns: 1fr;
        }
    }

    article{
        flex:1 1 40%;
        background-color: #F5F5F5;
        border-radius: 8px;
        border:1px solid #e0e0e0;
        padding: 1rem 1.25rem;
        display: flex;
        flex-direction: column;
        cursor: pointer;

        .dateAuteurContainer{
            display: flex;
            flex-direction: row;
            column-gap: 6rem;
            font-size: 14px;
        }

        &:hover{
            border:1px solid #7763C5;
            box-shadow: 0 8px 16px #7763C544;
        }
    }

    h3{
        font-size: 16px;
        margin-bottom: 0.5rem;
    }

    p{
        font-size: 14px;
        margin-top: 0.5rem;
    }

    button{
        border:none;
        background-color: #7763C5;
        color:white;
        font-weight: 700;
        height:40px;
        width: 166px;
        align-self: center;
        border-radius: 6px;
        cursor: pointer;

        &:hover{
            box-shadow: 0 8px 16px #7763C544;
            background-color: #957cda;
        }
    }
}

